# CatiaMenuWin32

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CONTRIBUTING.md  CONTRIBUTORS.md  PRIVACY.md  README.md  SECURITY.md
.github/: feature_request.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: clang-tidy.yml  codeql.yml  format.yml  release.yml
Data/: settings.ini
docs/: README.md  _config.yml  about.md  changelog.md  developer-guide.md  faq.md  file-reference.md  index.md  privacy-policy.md  robots.txt  sitemap.xml  user-guide.md
docs/_includes/: head-custom.html
res/: app.manifest  resource.rc  resource.rc.in  version.h.in
src/: app.h  github.c  help.c  log.c  main.c  main.h  meta.c  paint.c  prefs.c  quickbar.c  resource.h  resource.rc  runner.c  settings.c  sources.c  sync.c  tabs.c  updater.c  version.h.in  window.c
